# TDDPythonDemo

./: README.md
src/: pyproject.toml
src/TddPythonDemo/: main.py
src/tests/: test_tddpythondemo.py
