[tool.poetry]
name = "TddPythonDemo"
version = "0.1.0"
description = ""
authors = ["lucas_baiao <lucas.baiao@edirectinsure.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
